# maliput_geopackage

./: .gitignore  BUILD.bazel  CHANGELOG.rst  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel  package.xml
.bcr/: metadata.template.json  presubmit.yml
.devcontainer/: README.md
.devcontainer/bazel-zen/: devcontainer.json
.devcontainer/bazel6/: devcontainer.json
.devcontainer/bazel7/: devcontainer.json
.github/: copilot-instructions.md  try_vcs_checkout
.github/workflows/: build.yml  build_macos.yaml  containers.yml  publish.yaml
design/: discrete_format_comparison.md  geopackage_partial_loading.md
env-hooks/: maliput_geopackage.dsv.in  maliput_geopackage.sh.in
include/maliput_geopackage/builder/: params.h  road_network_builder.h
resources/: Town01.gpkg  Town02.gpkg  complex_road.gpkg  create_complex_road.py  create_two_lane_road.py  s_shape_superelevated_road.gpkg  t_shape_road.gpkg  two_lane_road.gpkg
resources/maliput_malidrive_to_gpkg/: README.md  maliput_malidrive_to_gpkg.py  pyproject.toml
schema/: README.md
schema/tools/: README.md  example_simple_road.py  schema.sql  template.gpkg
src/: CMakeLists.txt
src/maliput_geopackage/: CMakeLists.txt
src/maliput_geopackage/builder/: CMakeLists.txt  builder_configuration.cc  builder_configuration.h  road_network_builder.cc  road_rulebook_builder.cc  road_rulebook_builder.h  rule_registry_builder.cc  rule_registry_builder.h
src/maliput_geopackage/geopackage/: CMakeLists.txt  geopackage_manager.cc  geopackage_manager.h  geopackage_parser.cc  geopackage_parser.h  sqlite_helpers.cc  sqlite_helpers.h
src/maliput_geopackage/plugin/: CMakeLists.txt  road_network.cc
src/plugin/: CMakeLists.txt  road_network.cc
test/: BUILD.bazel  CMakeLists.txt  geopackage_manager_test.cc  geopackage_parser_test.cc  sqlite_helpers_test.cc
test/builder/: CMakeLists.txt  builder_configuration_test.cc  road_network_builder_test.cc
test/resources/: Town01.gpkg  complex_road_speed_limits.yaml  t_shape_road.gpkg  two_lane_road.gpkg  two_lane_road_extra_rules.yaml
tools/: reformat_code.sh
