<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maliput_geopackage</name>
  <version>0.1.0</version>
  <description>Maliput backend for loading GeoPackage-based HD maps.</description>
  <maintainer email="franco.c@ekumenlabs.com">Franco Cipollone</maintainer>
  <license file="LICENSE">BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>maliput</depend>
  <depend>maliput_sparse</depend>

  <depend>libsqlite3-dev</depend>

  <doc_depend>ament_cmake_doxygen</doc_depend>

  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
