###############################################################################
# Loaders
###############################################################################

load("@rules_cc//cc:defs.bzl", "cc_test")
load("//:bazel/variables.bzl", "COPTS")

###############################################################################
# Tests
###############################################################################

cc_test(
    name = "builder_configuration_test",
    srcs = ["builder/builder_configuration_test.cc"],
    copts = COPTS,
    deps = [
        "//:builder",
        "//:private_builder_headers",
        "@googletest//:gtest_main",
        "@maliput//:api",
        "@maliput//:math",
        "@maliput_sparse//:loader",
        "@maliput_sparse//:parser",
    ],
)

cc_test(
    name = "sqlite_helpers_test",
    srcs = ["sqlite_helpers_test.cc"],
    copts = COPTS,
    data = glob(["resources/**"]),
    defines = ["TEST_RESOURCES_DIR=\\\"test/resources\\\""],
    deps = [
        "//:maliput_geopackage",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "geopackage_parser_test",
    srcs = ["geopackage_parser_test.cc"],
    copts = COPTS,
    data = glob(["resources/**"]),
    defines = ["TEST_RESOURCES_DIR=\\\"test/resources\\\""],
    deps = [
        "//:maliput_geopackage",
        "@googletest//:gtest_main",
    ],
)
